李宏毅学习笔记1

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,16 @@
+# Math
+<head>
+  <script src = "https://cdn.mathjax.org/mathjax/latest/mathjax.js?config=TeX-AMS-MML_HTMLorMML" type = "text/javascript"></script>
+  <script type = "text/x-mathjax-config">
+    MathJax.Hub.Config({
+      tex2jax: {
+        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+        inlineMath: [['$', '$']]
+      }
+    });
+  </script>
+</head>
+
 # The Site Configuration
 
 # Import the theme
